Change the title of product series: <product> Series: <series> => <product> <product> series.

--- a/lib/canonical/launchpad/pagetests/translations/xx-product-export.txt
+++ b/lib/canonical/launchpad/pagetests/translations/xx-product-export.txt
@@ -25,7 +25,7 @@ The translations export is implemented by the same machinery that does
 it for source packages (tested and documented separately).
 
     >>> print user_browser.title
-    Download translations for "Evolution Series: trunk"
+    Download translations for "Evolution trunk series"
 
     >>> user_browser.getControl('Request Download').click()
     >>> for message in get_feedback_messages(user_browser.contents):
