--- a/lib/canonical/launchpad/pagetests/translations/xx-translation-import-queue-filtering.txt
+++ b/lib/canonical/launchpad/pagetests/translations/xx-translation-import-queue-filtering.txt
@@ -342,11 +342,11 @@ The "Any project" filter here shows only those Evolution uploads.
 
     >>> displayed_entries = summarize_displayed_queue_entries(user_browser)
     >>> print displayed_entries
-    po/evolution-2.2-test.pot in Evolution Series: trunk ...
-    po/pt_BR.po in Evolution Series: trunk ...
-    foo-01.po in Evolution Series: trunk ...
-    foo-02.po in Evolution Series: trunk ...
-    foo-03.po in Evolution Series: trunk ...
+    po/evolution-2.2-test.pot in Evolution trunk series ...
+    po/pt_BR.po in Evolution trunk series ...
+    foo-01.po in Evolution trunk series ...
+    foo-02.po in Evolution trunk series ...
+    foo-03.po in Evolution trunk series ...
 
 None of the Hoary uploads are shown.
 
