--- a/lib/canonical/launchpad/pagetests/translations/xx-translation-import-queue.txt
+++ b/lib/canonical/launchpad/pagetests/translations/xx-translation-import-queue.txt
@@ -52,7 +52,7 @@ shown as static HTML.
     http://translations.launchpad.dev/firefox/1.0/+imports
     >>> 'po/es.po' in anon_browser.contents
     True
-    >>> 'Mozilla Firefox Series' in anon_browser.contents
+    >>> 'Mozilla Firefox 1.0 series' in anon_browser.contents
     True
     >>> '<td>Needs Review</td>' in anon_browser.contents
     True
@@ -98,7 +98,7 @@ to where we can edit imports.
   >>> browser.open('http://translations.launchpad.dev/+imports')
   >>> 'po/es.po' in browser.contents
   True
-  >>> 'Mozilla Firefox Series' in browser.contents
+  >>> 'Mozilla Firefox 1.0 series' in browser.contents
   True
   >>> browser.getLink(url='+imports/3')
   <Link text='[IMG]' url='http://translations.launchpad.dev/+imports/3'>
@@ -186,12 +186,12 @@ imported assigned.
   ...     anon_browser.contents, 'import-entries-list')
   >>> print extract_text(imports_table)
   pkgconf-mozilla.pot in
-  Mozilla Firefox Series: 1.0
+  Mozilla Firefox 1.0 series
   Approved
   ...
   Template "pkgconf-mozilla" in Mozilla Firefox 1.0
   po/es.po in
-  Mozilla Firefox Series: 1.0
+  Mozilla Firefox 1.0 series
   Approved
   ...    
   Spanish (es) translation of pkgconf-mozilla in Mozilla Firefox 1.0
@@ -235,7 +235,7 @@ But Jordi, a Rosetta expert, will be allowed to remove it.
 
   >>> print find_main_content(jordi_browser.contents)
   <...po/evolution-2.2-test.pot...
-  ...Evolution Series: trunk...
+  ...Evolution trunk series...
   ...field.status_1...
   ...selected="selected" value="DELETED"...
   ...Foo Bar...
@@ -251,7 +251,7 @@ Foo Bar Person is a launchpad admin and he's allowed to remove an entry.
 
   >>> print find_main_content(admin_browser.contents)
   <...po/pt_BR.po...
-  ...Evolution Series: trunk...
+  ...Evolution trunk series...
   ...field.status_2...
   ...selected="selected" value="DELETED"...
   ...Foo Bar...
@@ -271,7 +271,7 @@ The entry now appears deleted.
 
   >>> print find_main_content(ff_owner_browser.contents)
   <...po/es.po...
-  ...Mozilla Firefox Series: 1.0...
+  ...Mozilla Firefox 1.0 series...
   ...field.status_4...
   ...selected="selected" value="DELETED"...
   ...Sample Person...
