--- a/lib/lp/translations/stories/standalone/xx-translation-import-queue.txt
+++ b/lib/lp/translations/stories/standalone/xx-translation-import-queue.txt
@@ -14,11 +14,11 @@ template uploads.
 The upload consists of a tarball containing templates and/or
 translations.
 
-    >>> import canonical.launchpad
+    >>> import lp.translations
     >>> import os.path
     >>> test_file_name = os.path.join(
-    ...     os.path.dirname(canonical.launchpad.__file__),
-    ...     'pagetests/translations/xx-translation-import-queue.tar.gz')
+    ...     os.path.dirname(lp.translations.__file__),
+    ...     'stories/standalone/xx-translation-import-queue.tar.gz')
     >>> tarball = open(test_file_name, "rb")
     >>> upload = ff_owner_browser.getControl('File')
     >>> upload
@@ -284,8 +284,9 @@ Ubuntu uploads
 As a special case, the owners of Ubuntu's translation group are allowed
 to manage Ubuntu uploads.
 
-    >>> from canonical.launchpad.database import (
-    ...     Distribution, TranslationImportQueue)
+    >>> from lp.registry.model.distribution import Distribution
+    >>> from lp.translations.model.translationimportqueue import (
+    ...     TranslationImportQueue)
     >>> queue = TranslationImportQueue()
     >>> ubuntu = Distribution.selectOneBy(name='ubuntu')
     >>> hoary = ubuntu['hoary']
@@ -332,8 +333,8 @@ Let's check tar.bz2 uploads. They work ;-)
   ...     '+translations-upload')
 
   >>> test_file_name = os.path.join(
-  ...     os.path.dirname(canonical.launchpad.__file__),
-  ...     'pagetests/translations/xx-translation-import-queue.tar.bz2')
+  ...     os.path.dirname(lp.translations.__file__),
+  ...     'stories/standalone/xx-translation-import-queue.tar.bz2')
   >>> tarball = open(test_file_name)
 
   >>> evo_owner_browser.getControl('File').add_file(
@@ -365,8 +366,8 @@ Let's try now a tarball upload. Should work:
   ...     '+translations-upload')
 
   >>> test_file_name = os.path.join(
-  ...     os.path.dirname(canonical.launchpad.__file__),
-  ...     'pagetests/translations/xx-translation-import-queue.tar')
+  ...     os.path.dirname(lp.translations.__file__),
+  ...     'stories/standalone/xx-translation-import-queue.tar')
   >>> tarball = open(test_file_name)
 
   >>> evo_owner_browser.getControl('File').add_file(
@@ -386,8 +387,8 @@ We can handle an empty file disguised as a bzipped tarfile:
   ...     '+translations-upload')
 
   >>> test_file_name = os.path.join(
-  ...     os.path.dirname(canonical.launchpad.__file__),
-  ...     'pagetests/translations/empty.tar.bz2')
+  ...     os.path.dirname(lp.translations.__file__),
+  ...     'stories/standalone/empty.tar.bz2')
   >>> tarball = open(test_file_name)
 
   >>> evo_owner_browser.getControl('File').add_file(
@@ -406,8 +407,8 @@ And also a truncated tarball inside a bzip2 wrapper:
   ...     '+translations-upload')
 
   >>> test_file_name = os.path.join(
-  ...     os.path.dirname(canonical.launchpad.__file__),
-  ...     'pagetests/translations/truncated.tar.bz2')
+  ...     os.path.dirname(lp.translations.__file__),
+  ...     'stories/standalone/truncated.tar.bz2')
   >>> tarball = open(test_file_name)
 
   >>> evo_owner_browser.getControl('File').add_file(
